	methods need to be updated and re-installed.

    o	The handling of the 'method' argument of glm() has been
	refined following suggestions by Ioannis Kosmidis and Heather
	Turner.

    o	The handling of line textures in the postscript() and pdf()
	devices was set up for round end caps (the only type which
	existed at the time): it has now been adjusted for butt endcaps.


DEPRECATED & DEFUNCT

    o	Bundles of packages are defunct.

    o	stats::clearNames() is defunct: use unname().

    o	Basic regular expressions are defunct, and strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() no longer
	have an 'extended' argument.

    o	methods::trySilent() is defunct.

    o	index.search() (which was deprecated in 2.10.0) is no longer
	exported and has a different argument list.

    o	Use of multiple arguments to return() is now defunct.


BUG FIXES

    o	Using with(), eval() etc with a list with some unnamed
	elements now works. (PR#14035)

    o	The "quick" dispatch of S4 methods for primitive functions was
	not happening, forcing a search each time.  (Dispatch for
	closures was not affected.)  A side effect is that default
	values for arguments in a method that do not have defaults in
	the generic will now be ignored.

    o	Trying to dispatch methods for primitives during the search
	for inherited methods slows that search down and potentially
	could cause an infinite recursion.  An internal switch was
	added to turn off all such methods from findInheritedMethods().

    o	R framework installation (on Mac OS X) would not work properly
	if a rogue Resources directory was present at the top level.
	Such a non-symlink will now be renamed to Resources.old (and
	anything previously named Resources.old removed) as part of
	the framework installation process.

    o	Using read.table(header=TRUE) on a header with an embedded new
    	line would copy part of the header into the data.  (PR#14103)
